@@ -1,11 +1,13 @@
 package eu.xfsc.fc.core.dao.impl;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.resource.UserResource;
+import org.keycloak.representations.idm.RoleRepresentation;
 import org.keycloak.representations.idm.UserSessionRepresentation;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -30,14 +32,17 @@ public class SessionDaoImpl implements SessionDao {
         UserResource user = keycloak.realm(realm).users().get(id);
         List<UserSessionRepresentation> sessions = user.getUserSessions();
         log.debug("select; got sessions: {}", sessions);
-        if (sessions != null && sessions.size() > 0) {
-            UserSessionRepresentation ssn = sessions.get(0);
+        if (sessions != null && !sessions.isEmpty()) {
+            UserSessionRepresentation ssn = sessions.getFirst();
             log.debug("select; session {} of {}, started at: {}, last accessed at: {}, from: {}", 
                     ssn.getId(), ssn.getUsername(), ssn.getStart(), ssn.getLastAccess(), ssn.getIpAddress());
             java.util.Date start = new java.util.Date(ssn.getStart());
             Instant started = start.toInstant(); 
-            return new Session(ssn.getUserId(), started, "ACTIVE", // what it should be??
-                    user.roles().getAll().getRealmMappings().stream().map(rr -> rr.getName()).collect(Collectors.toList()));
+            List<RoleRepresentation> realmMappings = user.roles().getAll().getRealmMappings();
+            List<String> roles = realmMappings != null
+                ? realmMappings.stream().map(RoleRepresentation::getName).collect(Collectors.toList())
+                : Collections.emptyList();
+            return new Session(ssn.getUserId(), started, "ACTIVE", roles);
         }
         return null;
     }
